# docs/swagger/swagger.json
@@ -222,6 +222,18 @@
                 "tags": [
                     "admin"
                 ],
+                "parameters": [
+                    {
+                        "description": "Thông tin san pham",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.UpdateProductById"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -298,6 +310,39 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "model.UpdateProductById": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "description": "Mô tả sản phẩm",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "Mã User (chuỗi ngẫu nhiên duy nhất)",
+                    "type": "string"
+                },
+                "image": {
+                    "description": "Ảnh sản phẩm",
+                    "type": "string"
+                },
+                "manufacture": {
+                    "description": "Hãng sản xuất",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "Tên hiển thị",
+                    "type": "string"
+                },
+                "price": {
+                    "description": "Giá sản phẩm",
+                    "type": "integer"
+                },
+                "quantity": {
+                    "description": "Số lượng",
+                    "type": "integer"
                 }
             }
         }
