# router/admin.go
@@ -15,6 +15,6 @@ func setupAdminRoutes(c *controller.Controller, api *gin.RouterGroup) {
 	api.GET("/get-products", c.GetProducts)
 	api.POST("/create-product", c.CreateProduct)
 	api.GET("/get-products/:id", c.GetProductById)
-	api.PUT("/update-products/:id", c.UpdateProductById)
+	api.PUT("/update-product/:id", c.UpdateProductById)
 	api.DELETE("/delete-product/:id", c.DeleteProductById)
 }
